--- a/app/src/main/res/layout/fragment_hotel_detail.xml
+++ b/app/src/main/res/layout/fragment_hotel_detail.xml
@@ -79,18 +79,26 @@
                 android:background="@color/gray_d4" />
         </TableLayout>
         <TextView
+            android:id="@+id/text_view_photosphere"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Gambar 360 derajat"
+            android:visibility="gone"
             android:textSize="14dp"
             android:gravity="center_horizontal"
             android:textColor="@color/gray_43"/>
+        <!--<com.android.volley.toolbox.NetworkImageView-->
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/image"/>
         <Button
             android:id="@+id/button_view_photosphere"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Lihat Photosphere Hotel"
             android:textSize="12dp"
+            android:visibility="gone"
             android:layout_margin="5dp"
             android:textColor="@color/white"
             android:background="@color/wallet_holo_blue_light"/>
