--- a/app/src/main/res/layout/fragment_trip_planner_home.xml
+++ b/app/src/main/res/layout/fragment_trip_planner_home.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
@@ -7,4 +9,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="this is trip planner page"/>
-</LinearLayout>
+
+    <com.getbase.floatingactionbutton.FloatingActionButton
+        android:id="@+id/pink_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:tint="@color/white"
+        fab:fab_icon="@android:drawable/ic_input_add"
+        fab:fab_colorNormal="@color/pink"
+        fab:fab_colorPressed="@color/pink_pressed"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"/>
+</FrameLayout>
