--- a/app/src/main/res/layout/fragment_restaurant_home.xml
+++ b/app/src/main/res/layout/fragment_restaurant_home.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
+<FrameLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_restaurant"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="this is restaurant list"/>
-</LinearLayout>
+        android:layout_height="match_parent"/>
+</FrameLayout>
