--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.Belitung" parent="@style/Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.Belitung" parent="Theme.AppCompat.Light">
         <item name="android:actionBarStyle">@style/ActionBar.Solid.Belitung</item>
-        <item name="actionBarStyle">@style/ActionBar.Solid.Belitung</item>
+        <!--<item name="actionBarStyle">@style/ActionBar.Solid.Belitung</item>-->
 
-        <item name="android:windowContentOverlay">@null</item>
+        <item name="colorPrimary">@color/primary</item>
+        <!--   darker variant for the status bar and contextual app bars -->
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <!--   theme UI controls like checkboxes and text fields -->
+        <item name="colorAccent">@color/button_orange</item>
+        <item name="android:textColorPrimary">@color/white</item>
+
+        <!--<item name="android:windowContentOverlay">@null</item> ilangin shadow-->
     </style>
 
     <style name="ActionBar.Solid.Belitung" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@color/light_blue</item>
         <item name="background">@color/light_blue</item>
+        <item name="elevation">20dp</item>
 
         <item name="android:titleTextStyle">@style/TitleTextStyle.ActionBar.Belitung</item>
         <item name="android:subtitleTextStyle">@style/SubtitleTextStyle.ActionBar.Belitung</item>
