change to material action bar and change icon

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -69,8 +69,8 @@
 
 
     <!-- Navigation Drawer Layout -->
-    <color name="active_section_background">#111111</color>
-    <color name="inactive_section_background">#06060A</color>
+    <color name="active_section_background">#42A5F5</color>
+    <color name="inactive_section_background">#BBDEFB</color>
 
     <!-- Flight Search Layout -->
 
@@ -94,10 +94,15 @@
 
     <!-- Flight Payment - Method Layout -->
     <color name="method_title_gray">#444444</color>
-    <color name="traveloka_link_blue">#0D7FCC</color>
+    <color name="link_blue">#0D7FCC</color>
 
     <!-- Help FAQ Layout -->
     <color name="help_faq_title_background">#F0F0F0</color>
     <color name="gray_ed">#EDEDED</color>
 
+    <color name="pink">#e91e63</color>
+    <color name="pink_pressed">#ec407a</color>
+
+    <color name="primary">#0277BD</color>
+    <color name="primary_dark">#9FA8DA</color>
 </resources>
