--- a/app/src/main/res/layout/fragment_hotel_home.xml
+++ b/app/src/main/res/layout/fragment_hotel_home.xml
@@ -5,8 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_hotel"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:text="this is hotel page"
+        android:gravity="center"/>
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/list_hotel"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"/>-->
 </FrameLayout>
