--- a/app/src/main/res/layout/fragment_restaurant_detail.xml
+++ b/app/src/main/res/layout/fragment_restaurant_detail.xml
@@ -39,21 +39,21 @@
             android:background="@color/gray_d4" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Website Restaurant"
             android:layout_marginTop="5dp"
             android:textSize="14dp"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:textColor="@color/gray_43"/>
 
         <TextView
             android:id="@+id/text_view_restaurant_website"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14dp"
             android:autoLink="web"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:paddingBottom="5dp"
             android:textColor="@color/link_blue"/>
 
