fix detail page padding for website and stop requesting photosphere if return from server is only the base address

--- a/app/src/main/res/layout/fragment_hotel_detail.xml
+++ b/app/src/main/res/layout/fragment_hotel_detail.xml
@@ -98,6 +98,8 @@
                         android:textSize="14dp"
                         android:layout_gravity="center"
                         android:autoLink="web"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginRight="16dp"
                         android:paddingBottom="5dp"
                         android:textColor="@color/link_blue"/>
                 </LinearLayout>
