--- a/app/src/main/res/layout/fragment_poi_detail.xml
+++ b/app/src/main/res/layout/fragment_poi_detail.xml
@@ -52,6 +52,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:autoLink="web"
             android:layout_gravity="center"
             android:paddingBottom="5dp"
