--- a/app/src/main/res/layout/fragment_trip_planner_result.xml
+++ b/app/src/main/res/layout/fragment_trip_planner_result.xml
@@ -41,5 +41,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"/>
+        <Button
+            android:id="@+id/button_save_trip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="SIMPAN"
+            android:textColor="@color/white"
+            android:background="@color/blue"/>
     </LinearLayout>
 </ScrollView>
