--- a/app/src/main/res/layout/row_trip_list.xml
+++ b/app/src/main/res/layout/row_trip_list.xml
@@ -38,7 +38,7 @@
                 android:text="Trip" />
 
             <TextView
-                android:id="@+id/text_view_trip_time"
+                android:id="@+id/text_view_additional_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
@@ -46,8 +46,7 @@
                 android:layout_below="@id/text_view_trip_name"
                 android:fontFamily="sans-serif-regular"
                 android:textSize="17dp"
-                android:textColor="@color/gray_43"
-                android:text="10.00" />
+                android:textColor="@color/gray_43" />
 
         </RelativeLayout>
 
